--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
         "league/flysystem": "^1.0",
         "league/climate": "^3.1",
         "symfony/console": "^2.7",
-        "league/flysystem-dropbox": "^1.0"
+        "league/flysystem-dropbox": "^1.0",
+        "league/container": "^1.3"
     },
     "autoload": {
         "psr-4": {
-            "mysqldumper\\Command\\": "src/"
+            "Gradcracker\\Console\\Command\\": "src/"
         }
     }
 }
