Move Dropbox config into config.json

--- a/config-example.json
+++ b/config-example.json
@@ -3,5 +3,9 @@
   "host": "HOSTNAME",
   "db":   "DATABASE",
   "user": "USER",
-  "pass": "PASSWORD"
+  "pass": "PASSWORD",
+   "dropbox": {
+  	"accesstoken": "ACCESSTOKEN",
+  	"appsecret": "APPSECRET"
+  }
 }
