Update example config

--- a/config-example.json
+++ b/config-example.json
@@ -4,7 +4,9 @@
   "db":   "DATABASE",
   "user": "USER",
   "pass": "PASSWORD",
-   "dropbox": {
+  "keepfor": "7 days",
+  "driver": "dropbox",
+  "dropbox": {
   	"accesstoken": "ACCESSTOKEN",
   	"appsecret": "APPSECRET"
   }
