--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,12 @@
 [
     {
         "name": "mysqldumper.phar",
+        "sha1": "1d4c2e82594f9bdc10c973fc5669b796f4afa40a",
+        "url": "https://github.com/JayBizzle/mysqldumper/releases/download/1.0.2/mysqldumper.phar",
+        "version": "1.0.2"
+    },
+    {
+        "name": "mysqldumper.phar",
         "sha1": "66f505f66d52420b9c277bd4f9d14360a6a3d36a",
         "url": "https://github.com/JayBizzle/mysqldumper/releases/download/1.0.1/mysqldumper.phar",
         "version": "1.0.1"
