Manifest published by the cpliakas/manifest-publisher tool

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,12 @@
 [
     {
         "name": "mysqldumper.phar",
+        "sha1": "92f8e88a27d3ab1a9a0bc73a35f28f116159dfac",
+        "url": "https://github.com/JayBizzle/mysqldumper/releases/download/1.0.1/mysqldumper.phar",
+        "version": "1.0.1"
+    },
+    {
+        "name": "mysqldumper.phar",
         "sha1": "47a5e51e877c8dabc423ed2eb004c154cd8af2d9",
         "url": "https://github.com/JayBizzle/mysqldumper/releases/download/1.0.0/mysqldumper.phar",
         "version": "1.0.0"
