--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/console": "^2.7",
         "league/flysystem-dropbox": "^1.0",
         "league/container": "^1.3",
-        "herrera-io/phar-update": "1.*"
+        "herrera-io/phar-update": "1.*",
+        "gabrielelana/byte-units": "0.2.*"
     },
     "autoload": {
         "psr-4": {
