--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "league/flysystem-dropbox": "^1.0",
         "league/container": "^1.3",
         "herrera-io/phar-update": "1.*",
-        "gabrielelana/byte-units": "0.2.*"
+        "gabrielelana/byte-units": "0.2.*",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "autoload": {
         "psr-4": {
